# QDataSet

./: .gitignore  .pylintrc  README.md  pyproject.toml  setup.py
qdata/: __init__.py
qdata/control_pulse/: __init__.py  control_pulse_generators.py  square_pulse.py
qdata/noise_profiles/: create_noise.py  type_five_noise.py  type_four_noise.py  type_one_noise.py  type_six_noise.py  type_three_noise.py  type_two_noise.py  type_zero_noise.py
qdata/system_layers/: hamiltonian_construction_layer.py  lti_layer.py  noise_layer.py  quantum_evolution.py  quantum_measurement_layer.py  quantum_ml_simulator.py  quantum_step_layer.py  signal_generator_layer.py  vo_layer.py
qdata/utilities/: simulate.py
qmldataset/: __init__.py
qmldataset/configurations/: __init__.py  config_1q_X.py  config_1q_XY.py  config_1q_XY_N1X_N5Z.py  config_1q_XY_N1X_N6Z.py  config_1q_XY_N3X_N6Z.py  config_1q_X_N1Z.py  (+9 more)
simulation/: TF_QST.ipynb  characterization_and_control.py  check_experiment.ipynb  create_G_1q_X.py  create_custom_experiment.py  create_experiment.py  dataset_G_1q_X.py  dataset_G_1q_XY.py  dataset_G_1q_XY_XZ_N1N5.py  dataset_G_1q_XY_XZ_N1N6.py  dataset_G_1q_XY_XZ_N3N6.py  dataset_G_1q_X_Z_N1.py  dataset_G_1q_X_Z_N2.py  dataset_G_1q_X_Z_N3.py  dataset_G_1q_X_Z_N4.py  dataset_G_2q_IX-XI-XX.py  dataset_G_2q_IX-XI-XX_IZ-ZI_N1-N5.py  dataset_G_2q_IX-XI-XX_IZ-ZI_N1-N6.py  dataset_G_2q_IX-XI_IZ-ZI_N1-N6.py  dataset_S_1q_X.py  dataset_S_1q_XY.py  dataset_S_1q_XY_XZ_N1N5.py  dataset_S_1q_XY_XZ_N1N6 .py  dataset_S_1q_XY_XZ_N3N6.py  dataset_S_1q_X_Z_N1.py  dataset_S_1q_X_Z_N2.py  dataset_S_1q_X_Z_N3.py  dataset_S_1q_X_Z_N4.py  dataset_S_2q_IX-XI-XX.py  dataset_S_2q_IX-XI-XX_IZ-ZI_N1-N5.py  dataset_S_2q_IX-XI-XX_IZ-ZI_N1-N6.py  dataset_S_2q_IX-XI_IZ-ZI_N1-N6.py  verification-new.ipynb  verification.ipynb  verify_noise_tf.ipynb
(+66 files in other folders)
