[tool.poetry]
name = "qmldataset"
version = "0.1.0"
description = "Dataset for applying ML on quantum systems."
authors = ["Rajib Chakravorty <4748396+rajibchakravorty@users.noreply.github.com>"]
license = "MIT"
packages = [
    { include = "qmldataset" }
]


[tool.poetry.dependencies]
python = "^3.8"
qutip = "^4.6.2"
tensorflow = "^2.6.0"
numpy = "1.19.5"

[tool.poetry.dev-dependencies]
pylint = "^2.10.1"
pytest = "^6.2.4"

[tool.dephell.main]
from = {format="poetry", path="pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
versioning = "pep"
prereleases = true

[build-system]
requires = ["poetry>=1.0.0", "setuptools>=41.0.0"]
build-backend = "poetry.masonry.api"
