[tool.poetry]
name = "qmldataset"
version = "0.1.0"
description = "Synthetic dataset generator to apply ML in quantum systems"
authors = ["Rajib Chakravorty <4748396+rajibchakravorty@users.noreply.github.com>"]
license = "MIT"
packages = [
    { include = "qmldataset" }
]

[tool.poetry.dependencies]
python = "^3.8"
qutip = "^4.6.2"
numpy = "1.19.5"
tensorflow = "^2.6.0"

[tool.poetry.dev-dependencies]
pylint = "^2.10.2"
pytest = "^6.2.5"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"